# downsample

./: CMakeLists.txt  Readme.md  setup.py
downsample/: __init__.py  downsample_impl.cpp
